# WaveCraft

./: .gitignore  pyproject.toml
datasets/: .gitignore
datasets/bp/: medieval_1a.bp  medieval_2a.b  medieval_2b.bp  medieval_2c.bp  medieval_2d.bp  medieval_2e.bp  medieval_2f.bp  medieval_3a.bp
docs/: algorithm_rethink.md  kickstarter.md  phase1_summary.md  phase2_evaluation.md  phase3_ruleset.md  phase4_generation.md  result_soundness_review.md  tile_inspector.md
src/wavecraft/: __init__.py  analyze_phase_results.py  architecture.py  convert_bp_to_schem.py  export_tile_schematic.py  phase1_prepare_dataset.py  phase2_extract_tiles.py  phase2_parse_structures.py  phase3_build_rules.py  phase3_score_quality.py  phase4_generate.py  phase4_mine_grammar.py  phase5_mine_modules.py  phase6_generate_structure.py  phase7_detail_wfc.py  render_tile_inspector.py
