[project]
name = "wavecraft"
version = "0.1.0"
description = "Hierarchical Minecraft structure generation from parsed building grammar and semantic modules."
requires-python = ">=3.12"
dependencies = [
    "nbtlib>=2.0.4",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
wavecraft-convert-bp = "wavecraft.convert_bp_to_schem:main"
wavecraft-phase1 = "wavecraft.phase1_prepare_dataset:main"
wavecraft-phase2 = "wavecraft.phase2_parse_structures:main"
wavecraft-phase3 = "wavecraft.phase3_score_quality:main"
wavecraft-phase4 = "wavecraft.phase4_mine_grammar:main"
wavecraft-phase5 = "wavecraft.phase5_mine_modules:main"
wavecraft-phase6 = "wavecraft.phase6_generate_structure:main"
wavecraft-phase7 = "wavecraft.phase7_detail_wfc:main"
wavecraft-legacy-phase2 = "wavecraft.phase2_extract_tiles:main"
wavecraft-legacy-phase3 = "wavecraft.phase3_build_rules:main"
wavecraft-legacy-phase4 = "wavecraft.phase4_generate:main"
wavecraft-analyze-results = "wavecraft.analyze_phase_results:main"
wavecraft-render-tiles = "wavecraft.render_tile_inspector:main"
wavecraft-export-tile-schem = "wavecraft.export_tile_schematic:main"

[tool.uv]
package = true
